# Vortexy

./: .gitignore  .tags  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  README.txt  Sim  Vortexy  Vortexy.cbp  Vortexy_doc.aux  Vortexy_doc.bcf  Vortexy_doc.out  Vortexy_doc.run.xml  Vortexy_doc.tex  Vortexy_doc.toc  a.out  build.sh  buildall.sh  buildrun.sh  buildsim.sh  clean.sh  cmake_install.cmake  cmakeclean.sh  lidcav.nb  link.sh  makerun.sh  pipe.nb  run.sh  sim.cfg  sim100.cfg  vortexy_plotter.nb
data/: cb.1.edge  cb.1.ele  cb.1.face  cb.cfg  cube.1.edge  cube.1.node  cube.1.smesh  cube.cfg  faces.cfg  fluid.cfg  fluid1.ppm  gen.sh  ins.1.edge  ins.1.ele  ins.1.face  ins.1.mesh  ins.1.node  ins.1.smesh  ins.stl  obs.cfg  p.stl  pc.1.edge  pc.1.ele  pc.1.face  pc.1.mesh  pc.1.mtr  pc.1.node  pc.1.smesh  pc.2.edge  pc.2.ele  pc.2.face  pc.2.node  pc.mtl  pcf.stl  pipe.1.edge  pipe.1.ele  pipe.1.face  pipe.1.node  pipe.1.smesh  po.1.edge  (+16 more)
data/cube/: cb.1.mesh  cube.1.edge  cube.1.ele  cube.1.face  cube.1.mesh  cube.1.mtr  cube.1.node  cube.1.smesh  cube.cfg  cube.stl  cubeplane.1.mesh  gen.sh  lid.cfg  sim.cfg
data/cube_16x16x16_s2/: cube.cfg  cube_16x16x16_s2.1.edge  cube_16x16x16_s2.1.ele  cube_16x16x16_s2.1.face  cube_16x16x16_s2.1.mesh  cube_16x16x16_s2.1.node  cube_16x16x16_s2.1.smesh  cube_16x16x16_s2.stl  sim.cfg
data/lid16/: lid100.cfg  lid1000.cfg  sim100.cfg  sim1000.cfg
data/meshes/: cb.1.edge  cb.1.ele  cb.1.face  cb.1.mesh  cb.1.node  cb.1.smesh  cb.stl  cube.1.ele  cube.1.face  cube.1.mesh  cube.1.mtr  cube.stl  obs.1.edge  obs.1.ele  obs.1.face  obs.1.mesh  obs.1.node  obs.1.smesh  obs.stl  pc.1.edge  pc.1.face  pc.1.smesh  pc.stl  pipe.1.mesh  pipe.stl  pl.1.edge  pl.1.ele  pl.1.face  pl.1.mesh  pl.1.node  pl.1.smesh  pl.stl  plr.1.edge  plr.1.ele  plr.1.face  plr.1.mesh  plr.1.node  plr.1.smesh  plr.stl  sqpipe.1.edge  (+22 more)
data/pipe_3x8_h4r1/: gen.sh  pipe.cfg  pipe0.cfg  pipe_3x8_h4r1.1.edge  pipe_3x8_h4r1.1.ele  pipe_3x8_h4r1.1.face  pipe_3x8_h4r1.1.mesh  pipe_3x8_h4r1.1.mtr  pipe_3x8_h4r1.1.node  pipe_3x8_h4r1.1.smesh  pipe_3x8_h4r1.geo  pipe_3x8_h4r1.geo.opt  pipe_3x8_h4r1.msh  pipe_3x8_h4r1.stl  pipei.cfg  pipev.cfg  sim.cfg  simv.cfg
data/plane_16x16_s2/: free_fluid.cfg  free_sim.cfg  lid.cfg  plane.cfg  plane_16x16_s2.1.edge  plane_16x16_s2.1.ele  plane_16x16_s2.1.face  plane_16x16_s2.1.mesh  plane_16x16_s2.1.node  plane_16x16_s2.1.smesh  plane_16x16_s2.stl  plane_16x16_s2_yz.1.edge  plane_16x16_s2_yz.1.ele  plane_16x16_s2_yz.1.face  plane_16x16_s2_yz.1.mesh  plane_16x16_s2_yz.1.node  plane_16x16_s2_yz.1.smesh  plane_16x16_s2_yz.stl  sim.cfg
data/plane_8x8_s70/: free.cfg  free_fluid.cfg  free_sim.cfg  lid.cfg  pbc.cfg  plane.cfg  plane_8x8_s70.1.edge  plane_8x8_s70.1.ele  plane_8x8_s70.1.smesh  plane_8x8_s70.stl  plane_8x9_s70.1.ele  plane_8x9_s70.1.face  plane_8x9_s70.1.node  sim.cfg
data/poiseuille/: gen.sh  pipe.1.mesh  pipe_3x8_h4r1.1.mesh  pipesec.1.edge  pipesec.1.ele  pipesec.1.face  pipesec.1.mtr  pipesec.1.node  pipesec.1.smesh  pipesec.stl  poiseuille.cfg  poiseuillesec.cfg  poiseuillesec0.cfg  poiseuillesecv.cfg  sim.cfg  simsec.cfg
data/test/: channel.1.edge  channel.1.ele  channel.1.face  channel.1.mesh  channel.1.mtr  channel.1.node  channel.1.smesh  channel.cfg  channel.stl  channelsim.cfg  empty.cfg  emptysim.cfg  gen.sh  lid.cfg  plane.cfg  plane9.cfg  plane_8x8_s70.1.face  plane_8x8_s70.1.mesh  plane_8x8_s70.1.node  plane_8x9_s70.1.edge  plane_8x9_s70.1.mesh  plane_8x9_s70.1.smesh  plane_8x9_s70.stl  psim.cfg  sim.cfg  test.cfg  vortex.cfg  vortexsim.cfg
doc/: ex.c
gfx/: vortexyicon.ppm
lib/: libGL.so.1.7.0  libGLEW.so.2.1.0  libGLX.so.0.0.0  libgcc_s-10-20200216.so.1  libglfw.so.3  libglfw.so.3.3
lib/glew/: glew.pc
lib/glew/lib/: libGLEW.so.2.1.0
lib/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
lib/linux/: libGLEW.so.2.1.0  libgcc_s.so.1
src/: .#sim.h  main.c  sim.c  sim.h
src/kernel/: add.cl
src/phys/: field.c  field.h  fluid.c  fluid.h  gradient.c  gradient.h  interpolate.c  interpolate.h  mat.c  mat.h  mesh.c  mesh.h  obj.c  obj.h  phys.c  phys.h  solver.c  solver.h  sys.c  sys.h  vec.c  vec.h  volume.c  volume.h
src/render/: draw.c  input.h  render.c  render.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/render/shader/: main.frag  main.vert
src/util/: algebra.c  algebra.h  cfgParser.h  field.c  field.h  mat.c  mat.h  meshParser.h  objParser.h  randomUtil.h  texLoader.h  timeUtil.h  util.c  util.h  vec.c  vec.h
